# icloud-email-https-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.json
src/email_mcp/: __init__.py  cli.py  config.py  imap_client.py  parsing.py  server.py
tests/: test_cli.py  test_parsing.py  test_server.py
